--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </div>
 
                 <div class="video-player">
-                    <video controls poster="img/video-preview.jpg">
+                    <video controls poster="img/video.mp4">
                         <source src="video/gel-cushion.mp4" type="video/mp4">
                         Ваш браузер не підтримує відео.
                     </video>
