--- a/index.html
+++ b/index.html
@@ -171,6 +171,36 @@
 
     </main>
         <footer>
+            <div class="container">
+                <div class="footer-links">
+                    <ul>
+                        <li>
+                            ТОВ "Шопінг 3"
+                        </li>
+                        <li>
+                            ЄДРПОУ 44858473
+                        </li>
+                        <li>
+                            original.text2016@gmail.com
+                        </li>
+                        <li>
+                            Політика конфіденційності
+                        </li>
+                        <li>
+                            Договір оферти
+                        </li>
+                        <li>
+                            Користувацька угода
+                        </li>
+                        <li>
+                            Умови гарантії та повернення
+                        </li>
+                        <li>
+                            Відмова від відповідальності
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
         </footer>
 
