--- a/index.html
+++ b/index.html
@@ -97,10 +97,12 @@
         </section>
 
         <section class="benefits-section">
-            <div class="text-content">
+            <div class="benefits-section-title">
                 <h2><span class="highlight-blue">ПОДУШКА НЕЗАМІННА</span><br>
-                    <span class="highlight-blue dark">ДЛЯ ДОБРОГО САМОПОЧУТТЯ</span></h2>
+                    <span class="benefits-blue-dark">ДЛЯ ДОБРОГО САМОПОЧУТТЯ</span></h2>
                 <p class="subtitle">Турбота про здоров’я дешевше за лікування</p>
+            </div>
+            <div class="text-content">
                 <ul class="benefits-list">
                     <li>При тривалому сидячому положенні</li>
                     <li>Для профілактики болю у спині, попереку, куприку</li>
@@ -111,27 +113,26 @@
                     <li>Для запобігання пролежнів</li>
                     <li>Людям літнього віку</li>
                 </ul>
-            </div>
-            <div class="images-grid">
-                <img src="img/benefit1.jpg" alt="Жінка в офісі з подушкою">
-                <img src="img/benefit2.jpg" alt="Під колінами в саду">
-                <img src="img/benefit3.jpg" alt="Подушка в авто">
-                <img src="img/benefit4.jpg" alt="Подушка у візку">
+                <div class="images-grid">
+                    <img src="img/benefit1.jpg" alt="Жінка в офісі з подушкою">
+                    <img src="img/benefit2.jpg" alt="Під колінами в саду">
+                    <img src="img/benefit3.jpg" alt="Подушка в авто">
+                    <img src="img/benefit4.jpg" alt="Подушка у візку">
+                </div>
             </div>
         </section>
-
         <section class="features-section">
+            <h2 class="benefits-blue-dark">ОСОБЛИВОСТІ ГЕЛЕВОЇ ПОДУШКИ <span class="highlight-blue">EGG SITTER</span></h2>
             <div class="features-wrapper">
                 <div class="image-block">
                     <img src="img/PhotoSitter.png" alt="Гелева подушка Egg Sitter">
-                    <div class="discount-badge">
-                        <span class="discount">знижка<br><strong>-40%</strong></span>
-                        <span class="gift">+ чохол в подарунок</span>
+                    <div class="discount-badge-feat">
+                        <p>знижка<br><strong>-40%</strong></p>
                     </div>
+                    <p class="gift">+ чохол в<br> подарунок</p>
                 </div>
 
                 <div class="text-block">
-                    <h2>ОСОБЛИВОСТІ ГЕЛЕВОЇ ПОДУШКИ <span class="highlight-blue">EGG SITTER</span></h2>
                     <ul class="features-list">
                         <li><strong>3D-гелева конструкція "соти"</strong><br>Забезпечує ідеальну циркуляцію повітря та рівномірно розподіляє вагу, покращує кровообіг</li>
                         <li><strong>Ортопедичний ефект</strong><br>Підтримує правильне положення хребта, знижує тиск на поперек та куприк, знімає напругу з м’язів</li>
@@ -143,8 +144,8 @@
             </div>
 
             <div class="price-block">
-                <p class="price-bottom"><span class="new-price-block">399</span> грн <span class="old-price">665 грн</span></p>
-                <p class="note">Сьогодні зі знижкою!</p>
+                <p class="price-bottom"><span class="new-price-block">399</span> грн <span class="old-price-bottom">665 грн</span></p>
+                <p class="note-bottom">Сьогодні зі знижкою!</p>
                 <div class="container jus-center">
                     <a href="#" class="btn-main">Замовити зараз</a>
                 </div>
@@ -160,18 +161,103 @@
                 </div>
 
                 <div class="video-player">
-                    <video controls poster="img/video.mp4">
-                        <source src="video/gel-cushion.mp4" type="video/mp4">
-                        Ваш браузер не підтримує відео.
+                    <video src="img/0724.mp4" controls>
                     </video>
                 </div>
             </div>
         </section>
 
+        <section class="characteristics">
+                <div class="charact-title">
+                    <h2>ХАРАКТЕРИСТИКИ</h2>
+                </div>
+                <div class="content">
+                    <div class="image-block">
+                        <img src="img/harakterist.png" alt="Подушка">
+                    </div>
+                    <div class="table-block">
+                        <img src="img/table.png">
+                    </div>
+            </div>
+            <p class="note-charact">
+                Тепер ви можете сидіти хоч увесь день навіть на жорсткому стільці і не відчувати втоми. <br>
+                Саме тому навіть яйце не тріскається, якщо сісти на нього разом із подушкою!
+            </p>
+        </section>
 
+        <section class="reviews-section">
+            <div class="quote-block">
+                <img src="img/quot.svg"/>
+            <h2 class="section-title">Що кажуть <br> про подушку</h2>
+            </div>
+            <div>
+                <img class="arrow-bottom" src="img/Arrow-bot.svg">
+            </div>
+                <div class="reviews-wrapper">
+                    <div class="review-card">
+                        <div class="stars">★★★★★</div>
+                        <p class="review-text">
+                            "Я водій таксі, для мене це просто знахідка. Багато варіантів перепробував, але з цією подушкою найкомфортніше сидіти за кермом по 5–6 годин!"
+                        </p>
+                        <img src="img/rev1.png" alt="Фото подушки" class="review-img" />
+                        <p class="review-author">Ігор, Полтава</p>
+                    </div>
+
+                    <div class="review-card">
+                        <div class="stars">★★★★★</div>
+                        <p class="review-text">
+                            "Раніше після робочого дня боліло все тіло: поперек, шия, сідниці, але з цією подушкою стало ніби в зручному кріслі. Навіть під час Zoom-колів не кручуся від болю на твердому стільці."
+                        </p>
+                        <img src="img/rev2.png" alt="Фото подушки" class="review-img" />
+                        <p class="review-author">Ірина, Миколаїв</p>
+                    </div>
+
+                    <div class="review-card">
+                        <div class="stars">★★★★★</div>
+                        <p class="review-text">
+                            "Сиджу на ній щодня в офісі. Спина дякує! А тепер хочу ще замовити для дому. Сидіти на ній реально комфортніше!"
+                        </p>
+                        <img src="img/rev3.png" alt="Фото подушки" class="review-img" />
+                        <p class="review-author">Марина, Київ</p>
+                    </div>
+                </div>
+        </section>
+
+        <section class="delivery-section">
+            <div class="delivery-info">
+                <img src="img/shipping-fast.svg" alt="доставка" class="delivery-icon">
+                <h2>ДОСТАВКА І ОПЛАТА</h2>
+                <p>Швидка доставка протягом 1–3 днів Новою Поштою або Укрпоштою</p>
+                <p>Оплата — при отриманні замовлення</p>
+                <p>Перед відправкою усе ретельно перевіряємо та гарантуємо 100% якість</p>
+            </div>
+
+            <div class="delivery-content">
+                <div class="product-image">
+                    <img src="img/dostavka.png" alt="гелева подушка">
+                    <div class="discount-badge-bottom">Знижка<br><strong>-40%</strong></div>
+                </div>
+
+                <div class="order-form">
+                    <p class="form-subtitle">ЖИТИ З КОМФОРТОМ І ЛЕГКІСТЮ – <br>ВАШ КРАЩИЙ ВИБІР</p>
+                    <h3>ЗРОБИТИ ЗАМОВЛЕННЯ</h3>
+                    <input type="text" placeholder="Вкажіть Ваше ім'я">
+                    <input type="tel" placeholder="Ваш номер телефону">
+                    <div class="price-block">
+                        <span class="price-now">399 грн</span>
+                        <span class="price-old">665 грн</span>
+                    </div>
+                    <button class="btn-down">КУПИТИ ЗАРАЗ</button>
+                    <img src="img/contactform_banner.svg">
+                    <p class="confidential-note">Гарантуємо конфіденційність<br>ваших персональних даних</p>
+                </div>
+            </div>
+
+            <p class="bottom-text">З ЦІЄЮ ПОДУШКОЮ СИДІТИ — СПРАВЖНЄ ЗАДОВОЛЕННЯ.<br>І ВАШЕ ТІЛО ВАМ ПОДЯКУЄ</p>
+        </section>
     </main>
         <footer>
-            <div class="container">
+
                 <div class="footer-links">
                     <ul>
                         <li>
@@ -200,10 +286,8 @@
                         </li>
                     </ul>
                 </div>
-            </div>
 
         </footer>
-
 </div>
 </body>
 </html>
