--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Gel Pillow</title>
 
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/media.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,12 +78,12 @@
                     <img src="img/comf1.png" alt="Гелева подушка в подорожах">
                     <p class="caption">в подорожах</p>
                 </div>
-                <img src="img/Arrow1.svg">
+                <img class="icon_arrow" src="img/Arrow1.svg">
                 <div class="card">
                     <img src="img/comf2.png" alt="Гелева подушка в офісі">
                     <p class="caption">в офісі</p>
                 </div>
-                <img src="img/Arrow2.svg">
+                <img class="icon_arrow" src="img/Arrow2.svg">
                 <div class="card">
                     <img src="img/comf3.png" alt="Гелева подушка вдома">
                     <p class="caption">вдома</p>
@@ -241,8 +242,14 @@
                 <div class="order-form">
                     <p class="form-subtitle">ЖИТИ З КОМФОРТОМ І ЛЕГКІСТЮ – <br>ВАШ КРАЩИЙ ВИБІР</p>
                     <h3>ЗРОБИТИ ЗАМОВЛЕННЯ</h3>
-                    <input type="text" placeholder="Вкажіть Ваше ім'я">
-                    <input type="tel" placeholder="Ваш номер телефону">
+                    <form class="inp-but" action="#">
+                        <input class="name-input" type="text" placeholder="Вкажіть Ваше ім'я">
+                        </a>
+                    </form>
+                    <form class="inp-but" action="#">
+                        <input class="tel-inp" type="tel" placeholder="Ваш номер телефону">
+                        </a>
+                    </form>
                     <div class="price-block">
                         <span class="price-now">399 грн</span>
                         <span class="price-old">665 грн</span>
