--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/media.css">
 
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.default.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -194,7 +199,7 @@
             <div>
                 <img class="arrow-bottom" src="img/Arrow-bot.svg">
             </div>
-                <div class="reviews-wrapper">
+                <div class="reviews-wrapper owl-carousel">
                     <div class="review-card">
                         <div class="stars">★★★★★</div>
                         <p class="review-text">
@@ -203,7 +208,6 @@
                         <img src="img/rev1.png" alt="Фото подушки" class="review-img" />
                         <p class="review-author">Ігор, Полтава</p>
                     </div>
-
                     <div class="review-card">
                         <div class="stars">★★★★★</div>
                         <p class="review-text">
@@ -212,7 +216,6 @@
                         <img src="img/rev2.png" alt="Фото подушки" class="review-img" />
                         <p class="review-author">Ірина, Миколаїв</p>
                     </div>
-
                     <div class="review-card">
                         <div class="stars">★★★★★</div>
                         <p class="review-text">
@@ -295,6 +298,14 @@
                 </div>
 
         </footer>
+
+    <script src="js/owl.carousel.js" type="text/javascript"></script>
+
+    <script src="js/script.js" type="text/javascript"></script>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
 </div>
 </body>
 </html>
