--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gel Pillow</title>
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/media.css">
@@ -22,57 +24,58 @@
 
 </head>
 <body>
+
 <div class="wrapper">
     <header class="container">
         <ul class="header-links">
-            <li><a href="#">Доставка і оплата</a></li>
-            <li><a href="#">Відгуки</a></li>
-            <li><a class="head-btn" href="#">Як замовити</a></li>
+            <li><a href="#delivery">Доставка і оплата</a></li>
+            <li><a href="#rewiews">Відгуки</a></li>
+            <li><a class="head-btn" href="#form">Як замовити</a></li>
         </ul>
-        </header>
+    </header>
     <main>
 
-<section class="hero-screen">
-    <div class="container">
-        <div class="hero-left">
-            <h1>
-                <span class="thin-text">ОРТОПЕДИЧНА ГЕЛЕВА</span><br>
-                <span class="bold-text">ПОДУШКА</span> + чохол<br>
-                <p class="comfort-text">ДЛЯ КОМФОРТНОГО СИДІННЯ</p>
-            </h1>
+        <section class="hero-screen">
+            <div class="container">
+                <div class="hero-left">
+                    <h1>
+                        <span class="thin-text">ОРТОПЕДИЧНА ГЕЛЕВА</span><br>
+                        <span class="bold-text">ПОДУШКА</span> + чохол<br>
+                        <p class="comfort-text">ДЛЯ КОМФОРТНОГО СИДІННЯ</p>
+                    </h1>
 
-            <ul class="icons">
-                <li>
-                    <img src="img/Office_Chair.svg">
-                </li>
-                <li>
-                    <img src="img/Porsche.svg">
-                </li>
-                <li>
-                    <img src="img/icon-park_seat.svg">
-                </li>
-                <li>
-                    <img src="img/Airport.svg">
-                </li>
-                <li>
-                    <img src="img/Exterior.svg">
-                </li>
-            </ul>
-            <img src="img/pillow1.png" alt="Подушка" class="pillow-img">
+                    <ul class="icons">
+                        <li>
+                            <img src="img/Office_Chair.svg">
+                        </li>
+                        <li>
+                            <img src="img/Porsche.svg">
+                        </li>
+                        <li>
+                            <img src="img/icon-park_seat.svg">
+                        </li>
+                        <li>
+                            <img src="img/Airport.svg">
+                        </li>
+                        <li>
+                            <img src="img/Exterior.svg">
+                        </li>
+                    </ul>
+                    <img src="img/pillow1.png" alt="Подушка" class="pillow-img">
 
-            <div class="price">
-                <span class="old-price">665 </span>грн
-                <span class="new-price">399 </span>грн
+                    <div class="price">
+                        <span class="old-price"><?php echo $old_price; ?> </span>грн
+                        <span class="new-price"><?php echo $new_price; ?> </span>грн
+                    </div>
+                </div>
+                <div class="hero-right">
+                    <div class="discount-banner">РОЗПРОДАЖ -<?php echo $skidka; ?>%</div>
+                    <img src="img/banner_img.png" alt="Дівчина" class="woman-img">
+                </div>
             </div>
-        </div>
-        <div class="hero-right">
-            <div class="discount-banner">РОЗПРОДАЖ -40%</div>
-            <img src="img/banner_img.png" alt="Дівчина" class="woman-img">
-            </div>
-        </div>
-</section>
+        </section>
         <section class="container jus-center">
-            <a href="#" class="btn-main">Замовити зараз</a>
+            <a href="#form" class="btn-main">Замовити зараз</a>
         </section>
         <section class="comfort-section">
             <h2><span class="highlight-orange">ЗАБУДЬТЕ ПРО БІЛЬ ТА ДИСКОМФОРТ -</span>
@@ -133,7 +136,7 @@
                 <div class="image-block">
                     <img src="img/PhotoSitter.png" alt="Гелева подушка Egg Sitter">
                     <div class="discount-badge-feat">
-                        <p>знижка<br><strong>-40%</strong></p>
+                        <p>знижка<br><strong>-<?php echo $skidka; ?>%</strong></p>
                     </div>
                     <p class="gift">+ чохол в<br> подарунок</p>
                 </div>
@@ -150,10 +153,10 @@
             </div>
 
             <div class="price-block">
-                <p class="price-bottom"><span class="new-price-block">399</span> грн <span class="old-price-bottom">665 грн</span></p>
+                <p class="price-bottom"><span class="new-price-block"><?php echo $new_price; ?></span> грн <span class="old-price-bottom"><?php echo $old_price; ?> грн</span></p>
                 <p class="note-bottom">Сьогодні зі знижкою!</p>
                 <div class="container jus-center">
-                    <a href="#" class="btn-main">Замовити зараз</a>
+                    <a href="#form" class="btn-main">Замовити зараз</a>
                 </div>
             </div>
         </section>
@@ -167,23 +170,23 @@
                 </div>
 
                 <div class="video-player">
-                    <video src="img/0724.mp4" controls>
+                    <video src="img/egg_sitter_3.mp4" controls>
                     </video>
                 </div>
             </div>
         </section>
 
         <section class="characteristics">
-                <div class="charact-title">
-                    <h2>ХАРАКТЕРИСТИКИ</h2>
+            <div class="charact-title">
+                <h2>ХАРАКТЕРИСТИКИ</h2>
+            </div>
+            <div class="content">
+                <div class="image-block">
+                    <img src="img/harakterist.png" alt="Подушка">
                 </div>
-                <div class="content">
-                    <div class="image-block">
-                        <img src="img/harakterist.png" alt="Подушка">
-                    </div>
-                    <div class="table-block">
-                        <img src="img/table.png">
-                    </div>
+                <div class="table-block">
+                    <img src="img/table.png">
+                </div>
             </div>
             <p class="note-charact">
                 Тепер ви можете сидіти хоч увесь день навіть на жорсткому стільці і не відчувати втоми. <br>
@@ -191,44 +194,44 @@
             </p>
         </section>
 
-        <section class="reviews-section">
+        <section class="reviews-section" id="rewiews">
             <div class="quote-block">
                 <img src="img/quot.svg"/>
-            <h2 class="section-title">Що кажуть <br> про подушку</h2>
+                <h2 class="section-title">Що кажуть <br> про подушку</h2>
             </div>
             <div>
                 <img class="arrow-bottom" src="img/Arrow-bot.svg">
             </div>
-                <div class="reviews-wrapper owl-carousel">
-                    <div class="review-card">
-                        <div class="stars">★★★★★</div>
-                        <p class="review-text">
-                            "Я водій таксі, для мене це просто знахідка. Багато варіантів перепробував, але з цією подушкою найкомфортніше сидіти за кермом по 5–6 годин!"
-                        </p>
-                        <img src="img/rev1.png" alt="Фото подушки" class="review-img" />
-                        <p class="review-author">Ігор, Полтава</p>
-                    </div>
-                    <div class="review-card">
-                        <div class="stars">★★★★★</div>
-                        <p class="review-text">
-                            "Раніше після робочого дня боліло все тіло: поперек, шия, сідниці, але з цією подушкою стало ніби в зручному кріслі. Навіть під час Zoom-колів не кручуся від болю на твердому стільці."
-                        </p>
-                        <img src="img/rev2.png" alt="Фото подушки" class="review-img" />
-                        <p class="review-author">Ірина, Миколаїв</p>
-                    </div>
-                    <div class="review-card">
-                        <div class="stars">★★★★★</div>
-                        <p class="review-text">
-                            "Сиджу на ній щодня в офісі. Спина дякує! А тепер хочу ще замовити для дому. Сидіти на ній реально комфортніше!"
-                        </p>
-                        <img src="img/rev3.png" alt="Фото подушки" class="review-img" />
-                        <p class="review-author">Марина, Київ</p>
-                    </div>
+            <div class="reviews-wrapper owl-carousel">
+                <div class="review-card">
+                    <div class="stars">★★★★★</div>
+                    <p class="review-text">
+                        "Я водій таксі, для мене це просто знахідка. Багато варіантів перепробував, але з цією подушкою найкомфортніше сидіти за кермом по 5–6 годин!"
+                    </p>
+                    <img src="img/rev1.png" alt="Фото подушки" class="review-img" />
+                    <p class="review-author">Ігор, Полтава</p>
                 </div>
+                <div class="review-card">
+                    <div class="stars">★★★★★</div>
+                    <p class="review-text">
+                        "Раніше після робочого дня боліло все тіло: поперек, шия, сідниці, але з цією подушкою стало ніби в зручному кріслі. Навіть під час Zoom-колів не кручуся від болю на твердому стільці."
+                    </p>
+                    <img src="img/rev2.png" alt="Фото подушки" class="review-img" />
+                    <p class="review-author">Ірина, Миколаїв</p>
+                </div>
+                <div class="review-card">
+                    <div class="stars">★★★★★</div>
+                    <p class="review-text">
+                        "Сиджу на ній щодня в офісі. Спина дякує! А тепер хочу ще замовити для дому. Сидіти на ній реально комфортніше!"
+                    </p>
+                    <img src="img/rev3.png" alt="Фото подушки" class="review-img" />
+                    <p class="review-author">Марина, Київ</p>
+                </div>
+            </div>
         </section>
 
         <section class="delivery-section">
-            <div class="delivery-info">
+            <div class="delivery-info" id="delivery">
                 <img src="img/shipping-fast.svg" alt="доставка" class="delivery-icon">
                 <h2>ДОСТАВКА І ОПЛАТА</h2>
                 <p>Швидка доставка протягом 1–3 днів Новою Поштою або Укрпоштою</p>
@@ -239,25 +242,24 @@
             <div class="delivery-content">
                 <div class="product-image">
                     <img src="img/dostavka.png" alt="гелева подушка">
-                    <div class="discount-badge-bottom">Знижка<br><strong>-40%</strong></div>
+                    <div class="discount-badge-bottom">Знижка<br><strong>-<?php echo $skidka; ?>%</strong></div>
                 </div>
 
                 <div class="order-form">
                     <p class="form-subtitle">ЖИТИ З КОМФОРТОМ І ЛЕГКІСТЮ – <br>ВАШ КРАЩИЙ ВИБІР</p>
                     <h3>ЗРОБИТИ ЗАМОВЛЕННЯ</h3>
-                    <form class="inp-but" action="#">
-                        <input class="name-input" type="text" placeholder="Вкажіть Ваше ім'я">
-                        </a>
+                    <form class="inp-but" id="form" action="thankyou.php" method="post" onsubmit="if(this.name.value==''){alert('Введіть Ваше імя!');return false}if(this.phone.value==''){alert('Введіть Ваш номер телефону!');return false}return true;">
+                        <input class="name-input" type="text" name="name" placeholder="Вкажіть Ваше ім'я">
+
+                        <input class="tel-inp" type="tel" name="phone" placeholder="Ваш номер телефону">
+                        <div class="price-block">
+                            <span class="price-now"><?php echo $new_price; ?> грн</span>
+                            <span class="price-old"><?php echo $old_price; ?> грн</span>
+                        </div>
+                        <button class="btn-down" type="submit">КУПИТИ ЗАРАЗ</button>
                     </form>
-                    <form class="inp-but" action="#">
-                        <input class="tel-inp" type="tel" placeholder="Ваш номер телефону">
-                        </a>
-                    </form>
-                    <div class="price-block">
-                        <span class="price-now">399 грн</span>
-                        <span class="price-old">665 грн</span>
-                    </div>
-                    <button class="btn-down">КУПИТИ ЗАРАЗ</button>
+
+
                     <img src="img/contactform_banner.svg">
                     <p class="confidential-note">Гарантуємо конфіденційність<br>ваших персональних даних</p>
                 </div>
@@ -266,46 +268,45 @@
             <p class="bottom-text">З ЦІЄЮ ПОДУШКОЮ СИДІТИ — СПРАВЖНЄ ЗАДОВОЛЕННЯ.<br>І ВАШЕ ТІЛО ВАМ ПОДЯКУЄ</p>
         </section>
     </main>
-        <footer>
+    <footer>
 
-                <div class="footer-links">
-                    <ul>
-                        <li>
-                            ТОВ "Шопінг 3"
-                        </li>
-                        <li>
-                            ЄДРПОУ 44858473
-                        </li>
-                        <li>
-                            original.text2016@gmail.com
-                        </li>
-                        <li>
-                            Політика конфіденційності
-                        </li>
-                        <li>
-                            Договір оферти
-                        </li>
-                        <li>
-                            Користувацька угода
-                        </li>
-                        <li>
-                            Умови гарантії та повернення
-                        </li>
-                        <li>
-                            Відмова від відповідальності
-                        </li>
-                    </ul>
-                </div>
+        <div class="footer-links">
+            <ul>
+                <li>
+                    ТОВ "Шопінг 3"
+                </li>
+                <li>
+                    ЄДРПОУ 44858473
+                </li>
+                <li>
+                    <a href="mailto:original.text2016@gmail.com">original.text2016@gmail.com</a>
+                </li>
+                <li>
+                    <a href="politics.html" target="_blank">Політика конфіденційності</a>
+                </li>
+                <li>
+                    <a href="oferta.html" target="_blank">Договір оферти</a>
+                </li>
+                <li>
+                    <a href="usersagitment.html" target="_blank">Користувацька угода</a>
+                </li>
+                <li>
+                    <a href="conditions.html" target="_blank">Умови гарантії та повернення</a>
+                </li>
+                <li>
+                    <a href="vidmova.html" target="_blank">Відмова від відповідальності</a>
+                </li>
+            </ul>
+        </div>
 
-        </footer>
-
-    <script src="js/owl.carousel.js" type="text/javascript"></script>
-
-    <script src="js/script.js" type="text/javascript"></script>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
             integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="js/owl.carousel.js" type="text/javascript"></script>
 
+    <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/maskedinput.js" type="text/javascript"></script>
 </div>
 </body>
 </html>
